tests/cases/conformance/decorators/invalid/decoratorOnFunctionDeclaration.ts
// @target: es2015
declare function dec<T>(target: T): T;

@dec
function F() {
}